[package]
name = "diesel-subquery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { path = "../diesel/diesel", features = ["postgres", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
